OpenMat/PotNet/functions/header.h

/**
 * Collects all external functions used by cython
 * (eliminates compiler warnings)
 */

double upper_bessel_k(double, double, double, double);
double lower_bessel_k(double, double, double, double);